# PacMan

./: LICENSE  pacman.cabal  readme.md  todo.md
app/: Controller.hs  Main.hs  Model.hs  View.hs
app/Actions/: Interact.hs  Move.hs  Reset.hs
app/Utils/: Board.hs  Count.hs  PlayerUtil.hs  SaveGame.hs  Test.Hs  Text.hs
app/View/: GameOver.hs  Ghost.hs  Homescreen.hs  Level.hs  Lives.hs  Paused.hs  Player.hs  Round.hs  Score.hs
app/View/Scenes/: Homescreen.hs  LoadSave.hs  SelectBoard.hs
boards/: Example Custom Level  Four Corners  actually_good_level  minimal_testing_board  pacman  pacman2  testing
saves/: one life left.json  savegame.json
