cabal-version:      3.0
name:               pacman
version:            0.1.0.0
homepage:           https://github.com/MauritsWilke/PacMan
license:            MIT
license-file:       LICENSE
author:             MauritsWilke, ThomasRothfusz
maintainer:         mauritswilke@gmail.com
category:           Game
build-type:         Simple

common warnings
    ghc-options: -Wall

executable pacman
    import:           warnings
    hs-source-dirs:   app
    main-is:          Main.hs
    other-modules:    Controller,
                      Model,
                      View,
                      Utils.Board,
                      Utils.Count,
                      Utils.PlayerUtil,
                      Utils.SaveGame,
                      View.Level,
                      View.Player,
                      View.Lives,
                      View.Score,
                      View.Paused,
                      View.GameOver,
                      View.Round,
                      View.Scenes.Homescreen,
                      View.Scenes.SelectBoard,
                      View.Scenes.LoadSave,
                      View.Ghost,
                      Actions.Move,
                      Actions.Interact,
                      Actions.Reset
    build-depends:    random ^>=1.3.1, 
                      containers ^>=0.6.7, 

                      base >=4.18 && <4.22, 
                      gloss ^>=1.13.2.2,
                      directory,
                      filepath,
                      aeson,
    default-language: Haskell2010